# airflow-provider-unirate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_hook.py  test_operators.py  test_provider_info.py  test_sensor.py
unirate_provider/: __init__.py
unirate_provider/example_dags/: example_unirate.py
unirate_provider/hooks/: unirate.py
unirate_provider/operators/: unirate.py
unirate_provider/sensors/: unirate.py
